# HealthWise

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  HealthWise.py  Hotspots.csv  README.md  Test.csv  config.yaml  config_my.yaml  docker-compose.yml  docker-compose.yml.aws.example  docs_pl.md  pyproject.toml
backend/: database.py  graph.py  server.py
backend/chains/: aggregation_chain.py  chatbot_chain.py  knowledge_chain.py  logging_chain.py  validation_chain.py
code/: .env  requirements.txt
code/src/: database.py  graph.py  server.py
code/src/chains/: aggregation_chain.py  chatbot_chain.py  knowledge_chain.py  logging_chain.py
docs/: docs_pl.md
docs/e2/: docs_pl.md
docs/figures/: aasd_e2_bpmn.drawio
docs/presentation videos prompts/: demo_raw.txt  demo_ready.txt  presentation.txt
kg_rag/: run_setup.py  utility.py
kg_rag/rag_based_generation/GPT/: run_mcq_qa.py  text_generation.py
kg_rag/rag_based_generation/Llama/: text_generation.py
pages/: Chatbot.py  Disease_Hotspots.py
terraform/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: integration_tests.py  unit_tests.py
