[tool.poetry]
name = "aasd"
version = "0.1.0"
description = ""
authors = ["Milosz Lopatto <milosz.lopatto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.9"
langchain-openai = "^0.2.11"
langgraph = "^0.2.56"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
streamlit = "^1.40.2"
streamlit-geolocation = "^0.0.10"
matplotlib = "^3.9.3"
scikit-learn = "^1.5.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
